[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/enemies/MutantRat.gd" id="1_rat"]
[ext_resource type="Script" path="res://scripts/systems/HealthSystem.gd" id="2_health"]
[ext_resource type="Script" path="res://scripts/systems/CombatSystem.gd" id="3_combat"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(40, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 200.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(40, 20)

[node name="MutantRat" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 1
script = ExtResource("1_rat")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="HealthSystem" type="Node" parent="."]
script = ExtResource("2_health")
max_health = 50

[node name="CombatSystem" type="Node2D" parent="."]
script = ExtResource("3_combat")
damage = 15
attack_range = 50.0
attack_cooldown = 1.0

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1")

[node name="VisualBody" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
color = Color(0.6, 0.3, 0.3, 1)

[node name="Eyes" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="LeftEye" type="ColorRect" parent="Eyes"]
layout_mode = 0
offset_left = -15.0
offset_top = -5.0
offset_right = -10.0
offset_bottom = 0.0
color = Color(1, 0.2, 0.2, 1)

[node name="RightEye" type="ColorRect" parent="Eyes"]
layout_mode = 0
offset_left = 10.0
offset_top = -5.0
offset_right = 15.0
offset_bottom = 0.0
color = Color(1, 0.2, 0.2, 1)